--- a/login/resources/css/login.css
+++ b/login/resources/css/login.css
@@ -7,7 +7,7 @@
 
 .login-pf body {
   background: linear-gradient(#000000f0, #00000070),
-    url('../img/keycloak-bg.png') no-repeat center center fixed;
+    url('../img/keycloak-bg.jpg') no-repeat center center fixed;
   background-size: cover;
   height: 100%;
 }
